--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^22.2.9
   lottie: ^3.1.0
   syncfusion_flutter_charts: ^22.2.12
+  multi_select_flutter: ^4.1.3
+  favorite_button: ^0.0.4
+  easy_localization: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - image/
+    - assets/tranlate/
+    - assets/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
